Drop OS/ARCHITECTURE macros to make build reproducible
Signed-off-by: Vasyl Gello <vasek.gello@gmail.com>

--- a/pvr.wmc/resources/language/resource.language.ca_es/strings.po
+++ b/pvr.wmc/resources/language/resource.language.ca_es/strings.po
@@ -21,7 +21,7 @@ msgid "PVR WMC Client"
 msgstr "Client PVR WMC"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
 msgstr ""
 
 msgctxt "Addon Disclaimer"
