--- a/pvr.wmc/resources/language/resource.language.af_za/strings.po
+++ b/pvr.wmc/resources/language/resource.language.af_za/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC Kliënt"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ Weergawe. 'n PVR kliënt om met Windows Media Center Recording en EPG dienste te skakel. Dankie vir Tomba73 en Hoopsdavis. Spesiale dankie aan DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "'n PVR kliënt om met Windows Media Center Recording en EPG dienste te skakel. Dankie vir Tomba73 en Hoopsdavis. Spesiale dankie aan DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
