--- a/pvr.wmc/resources/language/resource.language.da_dk/strings.po
+++ b/pvr.wmc/resources/language/resource.language.da_dk/strings.po
@@ -22,8 +22,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC-klient"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ VERSION. En PVR klient der interagere med Windows Media Centers optagelse og EPG services. Tak til Tomba73 og Hoopsdavis. En speciel tak til DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "En PVR klient der interagere med Windows Media Centers optagelse og EPG services. Tak til Tomba73 og Hoopsdavis. En speciel tak til DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
