--- a/pvr.wmc/resources/language/resource.language.fi_fi/strings.po
+++ b/pvr.wmc/resources/language/resource.language.fi_fi/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "Kodin WMC-asiakasohjelma"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ -versio. Tämä PVR-asiakasohjelma on tarkoitettu käytettäväksi yhdessä Windows Media Centerin kanssa. Kiitokset Tomba 73:lle ja Hoopsdavisille. Erityiskiitokset DBurckhille."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "Tämä PVR-asiakasohjelma on tarkoitettu käytettäväksi yhdessä Windows Media Centerin kanssa. Kiitokset Tomba 73:lle ja Hoopsdavisille. Erityiskiitokset DBurckhille."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
