--- a/pvr.wmc/resources/language/resource.language.lv_lv/strings.po
+++ b/pvr.wmc/resources/language/resource.language.lv_lv/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC klients"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ izdevums. PVR klients saskarnei ar Windows Media Center Recording un EPG pakalpojumu. Pateicamies Tomba73 un Hoopsdavis. Īpašs paldies DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "PVR klients saskarnei ar Windows Media Center Recording un EPG pakalpojumu. Pateicamies Tomba73 un Hoopsdavis. Īpašs paldies DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
