--- a/pvr.wmc/resources/language/resource.language.nb_no/strings.po
+++ b/pvr.wmc/resources/language/resource.language.nb_no/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC-klient"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ Versjon. En PVR-klient som gir grensesnitt med Windows Mediasenters opptak og EPG-tjenester. Takk til Tomba73 og Hoopsdavis. Spesiellt takk til DBurckh"
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "En PVR-klient som gir grensesnitt med Windows Mediasenters opptak og EPG-tjenester. Takk til Tomba73 og Hoopsdavis. Spesiellt takk til DBurckh"
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
