--- a/pvr.wmc/resources/language/resource.language.sk_sk/strings.po
+++ b/pvr.wmc/resources/language/resource.language.sk_sk/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC klient"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "Klient pre @OS@ @ARCHITECTURE@. PVR klient pre prístup k Windows Media Center nahrávkam a EPG informáciám. Poďakovanie pre Tomba73 a Hoopsdavis. Špeciálne poďakovanie pre DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "PVR klient pre prístup k Windows Media Center nahrávkam a EPG informáciám. Poďakovanie pre Tomba73 a Hoopsdavis. Špeciálne poďakovanie pre DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
