--- a/pvr.wmc/resources/language/resource.language.sr_rs@latin/strings.po
+++ b/pvr.wmc/resources/language/resource.language.sr_rs@latin/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "PVR WMC Klijent"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ izdanje. PVR klijent za povezivanje sa Windows Media Center servisima snimanja i EPG. Hvala Tomba73 i Hoopsdavis. Posebno hvala DBurckh."
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "PVR klijent za povezivanje sa Windows Media Center servisima snimanja i EPG. Hvala Tomba73 i Hoopsdavis. Posebno hvala DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
