--- a/pvr.wmc/resources/language/resource.language.zh_cn/strings.po
+++ b/pvr.wmc/resources/language/resource.language.zh_cn/strings.po
@@ -21,8 +21,8 @@ msgid "PVR WMC Client"
 msgstr "WMC PVR 客户端"
 
 msgctxt "Addon Description"
-msgid "@OS@ @ARCHITECTURE@ Edition. A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "@OS@ @ARCHITECTURE@ 版。针对 Windows 媒体中心录像和电子节目单服务的 PVR 客户端界面。感谢 Tomba73 和 Hoopsdavis，特别感谢 DBurckh。"
+msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
+msgstr "针对 Windows 媒体中心录像和电子节目单服务的 PVR 客户端界面。感谢 Tomba73 和 Hoopsdavis，特别感谢 DBurckh。"
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
