--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,7 @@
+v19.0.1
+- Translations updates from Weblate
+	- da_dk, de_de
+
 v19.0.0
 - Translations updates from Weblate
   - da_dk, ko_kr, ml_in, pl_pl
