--- a/pvr.wmc/resources/language/resource.language.de_de/strings.po
+++ b/pvr.wmc/resources/language/resource.language.de_de/strings.po
@@ -7,14 +7,15 @@ msgstr ""
 "Project-Id-Version: KODI Main\n"
 "Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: German (Germany) (http://www.transifex.com/projects/p/kodi-main/language/de_DE/)\n"
-"Language: de_DE\n"
+"PO-Revision-Date: 2021-10-03 08:41+0000\n"
+"Last-Translator: matchuek <hansi77@yandex.com>\n"
+"Language-Team: German <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-wmc/de_de/>\n"
+"Language: de_de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.8\n"
 
 msgctxt "Addon Summary"
 msgid "PVR WMC Client"
@@ -66,11 +67,11 @@ msgstr "Aufzeichnungsdatei nicht gefunden"
 
 msgctxt "#30009"
 msgid "Alternate channel chosen: "
-msgstr "Alternativer Sender ausgewählt:"
+msgstr "Alternativer Sender ausgewählt: "
 
 msgctxt "#30010"
 msgid "Alternate time chosen: "
-msgstr "Alternative Zeit ausgewählt:"
+msgstr "Alternative Zeit ausgewählt: "
 
 msgctxt "#30011"
 msgid "Can't start, tuner is no longer available"
