--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,6 @@
+v20.2.1
+- Change name to make add-on easier to find in UI
+
 v20.2.0
 - Translation updates by Weblate
 - Kodi main API update to version 2.0.0
