--- a/pvr.wmc/resources/language/resource.language.hr_hr/strings.po
+++ b/pvr.wmc/resources/language/resource.language.hr_hr/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Croatian (Croatia) (http://www.transifex.com/projects/p/kodi-main/language/hr_HR/)\n"
-"Language: hr_HR\n"
+"PO-Revision-Date: 2023-01-04 18:15+0000\n"
+"Last-Translator: gogogogi <trebelnik2@gmail.com>\n"
+"Language-Team: Croatian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-wmc/hr_hr/>\n"
+"Language: hr_hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 4.15\n"
 
 msgctxt "Addon Summary"
 msgid "PVR WMC Client"
@@ -22,7 +23,7 @@ msgstr "PVR WMC klijent"
 
 msgctxt "Addon Description"
 msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "PVR klijent za povezivanje sa snimanjima i EPG uslugom Windows Media Centra.. Zahvaljujemo Tomba73 i Hoopsdavis. Posebna zahvala DBurckh."
+msgstr "PVR klijent za povezivanje sa snimanjima i EPG uslugom Windows Media Centra. Zahvaljujemo Tomba73 i Hoopsdavis. Posebna zahvala DBurckh."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
@@ -42,7 +43,7 @@ msgstr "Broj ulaza"
 
 msgctxt "#30003"
 msgid "Stream timeout, unknown problem"
-msgstr "Istek vremena streama, nepoznat problem"
+msgstr "Istek vremena strujanja, nepoznat problem"
 
 msgctxt "#30004"
 msgid "No video data found on this channel"
@@ -82,7 +83,7 @@ msgstr "Sadržaj programa je zaštićen"
 
 msgctxt "#30013"
 msgid "End time increased by "
-msgstr "Vrijeme završetka povećano je od"
+msgstr "Vrijeme završetka povećano je za "
 
 msgctxt "#30014"
 msgid "Enable SignalStatus calls"
@@ -122,19 +123,19 @@ msgstr "Greška emitiranja, ranije isključeno"
 
 msgctxt "#30023"
 msgid "Recording stream timed-out"
-msgstr "Istek vremena streama snimanja"
+msgstr "Istek vremena strujanja snimanja"
 
 msgctxt "#30024"
 msgid "Recording stream exited early"
-msgstr "Stream snimanja ranije isključen"
+msgstr "Strujanje snimanja ranije isključeno"
 
 msgctxt "#30025"
 msgid "Use WakeOnLAN to wake up server"
-msgstr "Koristi WakeOnLAN za buđenje poslužitelja"
+msgstr "Koristi 'Probudi putem LAN-a' za buđenje poslužitelja"
 
 msgctxt "#30026"
 msgid "Sending WakeOnLAN to server..."
-msgstr "Slanje WakeOnLAN na poslužitelj..."
+msgstr "Slanje 'Probudi putem LAN-a' na poslužitelj..."
 
 msgctxt "#30027"
 msgid "Time drift between client and backend of %s minutes"
