--- a/pvr.wmc/resources/language/resource.language.fi_fi/strings.po
+++ b/pvr.wmc/resources/language/resource.language.fi_fi/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Finnish (Finland) (http://www.transifex.com/projects/p/kodi-main/language/fi_FI/)\n"
-"Language: fi_FI\n"
+"PO-Revision-Date: 2023-03-22 21:16+0000\n"
+"Last-Translator: Oskari Lavinto <olavinto@protonmail.com>\n"
+"Language-Team: Finnish <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-wmc/fi_fi/>\n"
+"Language: fi_fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.15.2\n"
 
 msgctxt "Addon Summary"
 msgid "PVR WMC Client"
@@ -22,7 +23,7 @@ msgstr "Kodin WMC-asiakasohjelma"
 
 msgctxt "Addon Description"
 msgid "A PVR client to interface with Windows Media Center's Recording and EPG services. Thanks to Tomba73 and Hoopsdavis. Special thanks to DBurckh."
-msgstr "Tämä PVR-asiakasohjelma on tarkoitettu käytettäväksi yhdessä Windows Media Centerin kanssa. Kiitokset Tomba 73:lle ja Hoopsdavisille. Erityiskiitokset DBurckhille."
+msgstr "Tämä PVR-pääte on tarkoitettu käytettäväksi Windows Media Centerin kanssa. Kiitokset Tomba 73:lle ja Hoopsdavisille, ja erityiskiitos DBurckhille."
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
@@ -66,11 +67,11 @@ msgstr "Tallennustiedostoa ei löytynyt"
 
 msgctxt "#30009"
 msgid "Alternate channel chosen: "
-msgstr "Vaihtoehtoinen kanava valittu:"
+msgstr "Vaihtoehtoinen kanava valittu: "
 
 msgctxt "#30010"
 msgid "Alternate time chosen: "
-msgstr "Vaihtoehtoinen aika valittu:"
+msgstr "Vaihtoehtoinen aika valittu: "
 
 msgctxt "#30011"
 msgid "Can't start, tuner is no longer available"
@@ -82,7 +83,7 @@ msgstr "Kanavan sisältö on suojattu"
 
 msgctxt "#30013"
 msgid "End time increased by "
-msgstr "Lopetusaikaa laajennettu"
+msgstr "Päättymisaikaa pidennetty "
 
 msgctxt "#30014"
 msgid "Enable SignalStatus calls"
