--- a/pvr.wmc/resources/language/resource.language.it_it/strings.po
+++ b/pvr.wmc/resources/language/resource.language.it_it/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Italian (Italy) (http://www.transifex.com/projects/p/kodi-main/language/it_IT/)\n"
-"Language: it_IT\n"
+"PO-Revision-Date: 2023-04-04 18:00+0000\n"
+"Last-Translator: Massimo Pissarello <mapi68@gmail.com>\n"
+"Language-Team: Italian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-wmc/it_it/>\n"
+"Language: it_it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.15.2\n"
 
 msgctxt "Addon Summary"
 msgid "PVR WMC Client"
@@ -26,15 +27,15 @@ msgstr "Un client PVR per interfacciarsi con i servizi di registrazione ed EPG d
 
 msgctxt "Addon Disclaimer"
 msgid "This is experimental software. Use at your own risk."
-msgstr "Prova questo software sperimentale. Usalo a tuo rischio e pericolo."
+msgstr "Questo è un software sperimentale. Utilizzare a proprio rischio."
 
 msgctxt "#30000"
 msgid "Server Hostname or IP"
-msgstr "IP o nome server"
+msgstr "Nome host o IP del server"
 
 msgctxt "#30001"
 msgid "Keep IP address to 127.0.0.1, if server is running on this same system"
-msgstr "Imposta l'ip a 127.0.0.1 se il server è in funzione sullo stesso sistema"
+msgstr "Mantieni l'indirizzo IP su 127.0.0.1, se il server è in esecuzione su questo stesso sistema"
 
 msgctxt "#30002"
 msgid "Port Number"
@@ -42,23 +43,23 @@ msgstr "Numero porta"
 
 msgctxt "#30003"
 msgid "Stream timeout, unknown problem"
-msgstr "Interruzione dello stream, problema sconosciuto"
+msgstr "Timeout dello stream, problema sconosciuto"
 
 msgctxt "#30004"
 msgid "No video data found on this channel"
-msgstr "Nessun dato video trovato in questo canale"
+msgstr "Nessun dato video trovato su questo canale"
 
 msgctxt "#30005"
 msgid "Tuner is needed for recording"
-msgstr "Serve un tuner per registrare"
+msgstr "È necessario un sintonizzatore per registrare"
 
 msgctxt "#30006"
 msgid "Recording delete failed, file in use or write protected"
-msgstr "Eliminazione della registrazione fallita, file in uso o protetto dalla scrittura"
+msgstr "Eliminazione della registrazione non riuscita, file in uso o protetto da scrittura"
 
 msgctxt "#30007"
 msgid "Recording delete failed, recorded file doesn't exist"
-msgstr "Eliminazione della registrazione fallita, il file non esiste"
+msgstr "Eliminazione della registrazione non riuscita, il file registrato non esiste"
 
 msgctxt "#30008"
 msgid "Recording file not found"
@@ -66,15 +67,15 @@ msgstr "File registrato non trovato"
 
 msgctxt "#30009"
 msgid "Alternate channel chosen: "
-msgstr "Canale alternativo scelto:"
+msgstr "Canale alternativo scelto: "
 
 msgctxt "#30010"
 msgid "Alternate time chosen: "
-msgstr "Ora alternativa scelta:"
+msgstr "Orario alternativo scelto: "
 
 msgctxt "#30011"
 msgid "Can't start, tuner is no longer available"
-msgstr "Non posso avviare, il tuner non è più disponibile"
+msgstr "Impossibile avviare, il sintonizzatore non è più disponibile"
 
 msgctxt "#30012"
 msgid "Channel content is protected"
@@ -82,35 +83,35 @@ msgstr "Il contenuto del canale è protetto"
 
 msgctxt "#30013"
 msgid "End time increased by "
-msgstr "Ora fine aumentata di"
+msgstr "Ora fine aumentata di "
 
 msgctxt "#30014"
 msgid "Enable SignalStatus calls"
-msgstr "Abilita messaggi di stato segnale"
+msgstr "Abilita chiamate SignalStatus"
 
 msgctxt "#30015"
 msgid "Refresh SignalStatus Interval (sec)"
-msgstr "Aggiorna intervallo di stato segnale (sec)"
+msgstr "Intervallo aggiornamento SignalStatus (sec)"
 
 msgctxt "#30016"
 msgid "Store Resume/Watched status on server"
-msgstr "Salva lo stato Riprendi/Guardato sul server"
+msgstr "Memorizza lo stato Riprendi/Guardato sul server"
 
 msgctxt "#30017"
 msgid "Recorded TV folder not found"
-msgstr "Cartella di registrazione non trovata"
+msgstr "La cartella delle registrazioni TV non è stata trovata"
 
 msgctxt "#30018"
 msgid "Recorded TV folder cannot be opened"
-msgstr "La cartella di registrazione non può essere aperta"
+msgstr "La cartella delle registrazioni TV non può essere aperta"
 
 msgctxt "#30019"
 msgid "ServerWMC version update is available (%s)"
-msgstr "E' disponibile un aggiornamento di versione del ServerWMC (%s)"
+msgstr "L'aggiornamento della versione di ServerWMC è disponibile (%s)"
 
 msgctxt "#30020"
 msgid "All tuners for this channel are busy"
-msgstr "Tutti i tuner per questo canale sono occupati"
+msgstr "Tutti i sintonizzatori per questo canale sono occupati"
 
 msgctxt "#30021"
 msgid "LiveTV timed-out"
@@ -118,27 +119,27 @@ msgstr "Live TV interrotta"
 
 msgctxt "#30022"
 msgid "LiveTV error, exited early"
-msgstr "Errore nella Live TV, uscita in anticipo"
+msgstr "Errore LiveTV, uscita anticipata"
 
 msgctxt "#30023"
 msgid "Recording stream timed-out"
-msgstr "Lo stream registrato si è interrotto"
+msgstr "Stream registrato interrotto"
 
 msgctxt "#30024"
 msgid "Recording stream exited early"
-msgstr "Lo stream registrato è uscito in anticipo"
+msgstr "Errore stream registrato, uscita anticipata"
 
 msgctxt "#30025"
 msgid "Use WakeOnLAN to wake up server"
-msgstr "Usa WakeOnLAN per accendere il server"
+msgstr "Usa WakeOnLAN per riattivare il server"
 
 msgctxt "#30026"
 msgid "Sending WakeOnLAN to server..."
-msgstr "Inviando il segnale WakeOnLAN al server..."
+msgstr "Invio di WakeOnLAN al server in corso..."
 
 msgctxt "#30027"
 msgid "Time drift between client and backend of %s minutes"
-msgstr "Deriva temporale tra client e backend di %s minuti"
+msgstr "Differenza temporale tra client e backend di %s minuti"
 
 msgctxt "#30100"
 msgid "Recording Preference"
@@ -146,7 +147,7 @@ msgstr "Preferenze registrazione"
 
 msgctxt "#30101"
 msgid "Record this episode only"
-msgstr "Registra questo episodio solo"
+msgstr "Registra solo questo episodio"
 
 msgctxt "#30102"
 msgid "Record the series"
@@ -158,7 +159,7 @@ msgstr "Tipo di serie:"
 
 msgctxt "#30104"
 msgid "New and rerun"
-msgstr "Nuovo e riavvia"
+msgstr "Nuovi e replicati"
 
 msgctxt "#30105"
 msgid "New only"
@@ -198,7 +199,7 @@ msgstr "Elimina l'intera serie"
 
 msgctxt "#30130"
 msgid "Created by Repeating Timer"
-msgstr "Creato da timer ripetitivo"
+msgstr "Creato da timer ripetuto"
 
 msgctxt "#30131"
 msgid "One time (manual)"
@@ -226,7 +227,7 @@ msgstr "Ripetizione (lista desiderati)"
 
 msgctxt "#30140"
 msgid "Normal"
-msgstr "Normale"
+msgstr "-Normale"
 
 msgctxt "#30141"
 msgid "High"
@@ -242,7 +243,7 @@ msgstr "Solo nuovi episodi"
 
 msgctxt "#30151"
 msgid "New and Rerun Episodes"
-msgstr "Episodi Nuovi e riavviati"
+msgstr "Episodi nuovi e replicati"
 
 msgctxt "#30152"
 msgid "Live Only"
@@ -254,19 +255,19 @@ msgstr "Non impostato"
 
 msgctxt "#30161"
 msgid "Keep Latest Recordings"
-msgstr "Mantieni le ultime registrazioni"
+msgstr "Mantieni registrazioni più recenti"
 
 msgctxt "#30162"
 msgid "Keep Until I Watch"
-msgstr "Mantieni finchè non è stato guardato"
+msgstr "Mantieni finché è stato guardato"
 
 msgctxt "#30163"
 msgid "Keep Until Space Needed"
-msgstr "Mantieni fino a che c'è lo spazio necessario"
+msgstr "Mantieni finché c'è lo spazio necessario"
 
 msgctxt "#30164"
 msgid "Keep Until I Delete"
-msgstr "Mantieni finchè non è stato cancellato"
+msgstr "Mantieni finché non viene eliminato"
 
 msgctxt "#30165"
 msgid "Keep For 1 Week"
@@ -274,11 +275,11 @@ msgstr "Mantieni per 1 settimana"
 
 msgctxt "#30170"
 msgid "Keep As Many As Possible"
-msgstr "Mantieni il più possibile"
+msgstr "Mantieni il più a lungo possibile"
 
 msgctxt "#30171"
 msgid "Keep 1 Recording"
-msgstr "Mantieni una registrazione"
+msgstr "Mantieni 1 registrazione"
 
 msgctxt "#30172"
 msgid "Keep 2 Recordings"
