--- a/pvr.wmc/changelog.txt
+++ b/pvr.wmc/changelog.txt
@@ -1,3 +1,6 @@
+v22.0.0
+- Initial release for Piers (PVR Add-on API v8.4.0)
+
 v21.0.1
 - Translations updates from Weblate
 	- ast_es, be_by, cs_cz, de_de, es_es, fi_fi, fr_fr, hr_hr, it_it, sk_sk
